# gpu-kernel-lab

./: .gitignore  CMakeLists.txt  README.md
bench/: reduce_sum_baseline.cu  reduce_sum_benchmark.cu  reduce_sum_optimized.cu  softmax_benchmark.cu  transpose_baseline.cu  transpose_benchmark.cu  vectorAdd.cu
case_studies/: reduce_sum_case_study.md  softmax_case_study.md  transpose_case_study.md
docs/: hip_port.md
hip/: transpose_benchmark.hip.cpp
